--- a/projects/password-strength-meter/package.json
+++ b/projects/password-strength-meter/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-password-strength-meter",
+  "name": "@wise-community/angular-password-strength-meter",
   "version": "7.0.0",
   "dependencies": {
     "tslib": "^2.5.0"
@@ -24,11 +24,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/antoantonyk/password-strength-meter.git"
+    "url": "https://github.com/WISE-Community/password-strength-meter.git"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/antoantonyk/password-strength-meter/issues"
+    "url": "https://github.com/WISE-Community/password-strength-meter/issues"
   },
-  "homepage": "https://github.com/antoantonyk/password-strength-meter"
+  "homepage": "https://github.com/WISE-Community/password-strength-meter"
 }
