--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "password-strength-meter",
-  "version": "11.0.0",
+  "name": "@wise-community/password-strength-meter",
+  "version": "12.0.0",
   "scripts": {
     "ng": "ng",
     "serve": "ng serve",
@@ -18,7 +18,7 @@
     "e2e": "ng e2e"
   },
   "keywords": [
-    "angular 17",
+    "angular 18",
     "password-strength",
     "password-strength-component",
     "password-strength-meter",
@@ -26,36 +26,36 @@
     "angular password strength meter"
   ],
   "dependencies": {
-    "@angular/animations": "^17.0.0",
-    "@angular/common": "^17.0.0",
-    "@angular/compiler": "^17.0.0",
-    "@angular/core": "^17.0.0",
-    "@angular/forms": "^17.0.0",
-    "@angular/platform-browser": "^17.0.0",
-    "@angular/platform-browser-dynamic": "^17.0.0",
-    "@angular/router": "^17.0.0",
+    "@angular/animations": "^18.1.3",
+    "@angular/common": "^18.1.3",
+    "@angular/compiler": "^18.1.3",
+    "@angular/core": "^18.1.3",
+    "@angular/forms": "^18.1.3",
+    "@angular/platform-browser": "^18.1.3",
+    "@angular/platform-browser-dynamic": "^18.1.3",
+    "@angular/router": "^18.1.3",
     "bootstrap": "^5.2.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.2",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular-eslint/builder": "17.0.1",
-    "@angular-eslint/eslint-plugin": "17.0.0",
-    "@angular-eslint/eslint-plugin-template": "17.0.0",
-    "@angular-eslint/schematics": "17.0.0",
-    "@angular-eslint/template-parser": "17.0.0",
-    "@angular/cli": "^17.0.0",
-    "@angular/compiler-cli": "^17.0.0",
-    "@angular/language-service": "^17.0.0",
+    "@angular-devkit/build-angular": "^18.1.3",
+    "@angular-eslint/builder": "18.2.0",
+    "@angular-eslint/eslint-plugin": "18.2.0",
+    "@angular-eslint/eslint-plugin-template": "18.2.0",
+    "@angular-eslint/schematics": "18.2.0",
+    "@angular-eslint/template-parser": "18.2.0",
+    "@angular/cli": "^18.1.3",
+    "@angular/compiler-cli": "^18.1.3",
+    "@angular/language-service": "^18.1.3",
     "@types/jasmine": "~5.1.1",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "^20.9.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "coveralls": "^3.1.1",
-    "eslint": "^8.53.0",
+    "eslint": "^8.57.0",
     "jasmine-core": "~5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.4.2",
@@ -63,11 +63,11 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "ng-packagr": "^17.0.0",
+    "ng-packagr": "^18.1.0",
     "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.1",
-    "typescript": "^5.2.2",
+    "typescript": "^5.5.4",
     "typescript-tslint-plugin": "^1.0.2"
   },
   "repository": {
