--- a/projects/password-strength-meter/package.json
+++ b/projects/password-strength-meter/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "angular-password-strength-meter",
-  "version": "11.0.0",
+  "name": "@wise-community/angular-password-strength-meter",
+  "version": "12.0.0",
   "dependencies": {
     "tslib": "^2.5.0"
   },
   "peerDependencies": {
-    "@angular/common": "^17.0.0",
-    "@angular/core": "^17.0.0",
+    "@angular/common": "^18.1.3",
+    "@angular/core": "^18.1.3",
     "@zxcvbn-ts/core": "^3.0.0",
     "@zxcvbn-ts/language-en": "^3.0.0"
   },
@@ -15,7 +15,7 @@
     "email": "antoantony8@gmail.com"
   },
   "keywords": [
-    "angular 17",
+    "angular 18",
     "password-strength",
     "password-strength-component",
     "password-strength-meter",
