--- a/angular.json
+++ b/angular.json
@@ -20,7 +20,9 @@
             "outputPath": "dist/password-strength-meter-showcase",
             "index": "projects/password-strength-meter-showcase/src/index.html",
             "browser": "projects/password-strength-meter-showcase/src/main.ts",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "projects/password-strength-meter-showcase/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -77,7 +79,10 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": ["zone.js", "zone.js/testing"],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "tsConfig": "projects/password-strength-meter-showcase/tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -102,7 +107,7 @@
         }
       }
     },
-    "password-strength-meter": {
+    "@wise-community/password-strength-meter": {
       "projectType": "library",
       "root": "projects/password-strength-meter",
       "sourceRoot": "projects/password-strength-meter/src",
@@ -128,7 +133,10 @@
           "options": {
             "karmaConfig": "projects/password-strength-meter/karma.conf.js",
             "tsConfig": "projects/password-strength-meter/tsconfig.spec.json",
-            "polyfills": ["zone.js", "zone.js/testing"],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "codeCoverage": true
           }
         },
@@ -150,7 +158,9 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@angular-eslint/schematics"],
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ],
     "analytics": false
   }
 }
